--- a/.gitignore
+++ b/.gitignore
@@ -90,6 +90,7 @@ typings/
 
 # User-specific stuff
 ./idea/
+./idea/**/*.xml
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
