--- a/.gitignore
+++ b/.gitignore
@@ -89,7 +89,7 @@ typings/
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-./idea/
+./idea/*.xml
 ./idea/**/*.xml
 .idea/**/workspace.xml
 .idea/**/tasks.xml
