--- a/myapp/package.json
+++ b/myapp/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "test": "mocha ***/*.test.js"
   },
   "dependencies": {
+    "@types/express": "^4.16.1",
     "bcrypt": "^3.0.2",
     "bluebird": "^3.5.3",
     "cookie-parser": "~1.4.3",
@@ -20,5 +22,10 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.42.0",
     "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "expect": "^24.0.0",
+    "mocha": "^5.2.0",
+    "supertest": "^3.4.2"
   }
 }
